--- a/public/backend/css/styles.css
+++ b/public/backend/css/styles.css
@@ -11516,6 +11516,7 @@ body {
 } */
 .sb-sidenav-dark .sb-sidenav-menu .nav-link.active {
   color: #fff;
+  background-color: #cdcdeb8f;
 }
 .sb-sidenav-dark .sb-sidenav-menu .nav-link.active .sb-nav-link-icon {
   color: #fff;
