--- a/public/frontend/assets/css/main.css
+++ b/public/frontend/assets/css/main.css
@@ -591,9 +591,9 @@ a.back-to-top:hover, a.back-to-top:focus {
   background: #fff !important;
 }
 
-.top-nav-collapse .navbar-brand {
+/* .top-nav-collapse .navbar-brand {
   top: 0px;
-}
+} */
 
 .top-nav-collapse .navbar-nav .nav-link {
   color: #333 !important;
@@ -804,7 +804,8 @@ a.back-to-top:hover, a.back-to-top:focus {
 }
 @media (max-width: 768px) {
   .nav-mod-title {
-    top: 13px;
+    /* top: 13px; */
+    top: 15px;
     font-size: 1.2rem;
   }
 }
@@ -1579,14 +1580,19 @@ a.back-to-top:hover, a.back-to-top:focus {
 }
 
 .contact-map .container-form {
-  position: absolute;
-  top: -630px;
-  width: 450px;
-  left: 0%;
+  /* position: absolute; */
+  /* top: -630px; */
+  /* width: 450px; */
+  /* left: 0%; */
   padding: 40px 15px;
-  margin-left: -15px;
   z-index: 99;
 }
+/* @media (max-width: 575px) {
+  .contact-map .container-form {
+    margin-left: -15px;
+    width: auto;
+  }
+} */
 
 .contact-map .container-form .form-wrapper {
   background-color: white;
@@ -1604,7 +1610,8 @@ a.back-to-top:hover, a.back-to-top:focus {
   background-color: #fff;
   background-image: none;
   background-clip: padding-box;
-  border: 1px solid #f1f1f1;
+  /* border: 1px solid #f1f1f1; */
+  border: 1px solid  #a7a0a0;
   border-radius: .25rem;
 }
 
@@ -1614,7 +1621,22 @@ a.back-to-top:hover, a.back-to-top:focus {
   border-color: #ad1f6d;
   outline: 0;
 }
-
+.contact-map .container-map {
+  padding: 40px 15px;
+  height: 100%;
+  width: 100%;
+}
+.contact-map .ifram-box {
+  height: 100%;
+  width: 100%;
+  background-color: white;
+  padding: 20px 25px;
+  box-shadow: 0 0 20px rgb(0 0 0 / 20%);
+}
+.container-map .ifram-box iframe {
+  width: 100%;
+  height: 100%;
+}
 .list-unstyled li {
   margin-top: 10px;
   color: #dc3545 !important;
