--- a/public/frontend/assets/css/main.css
+++ b/public/frontend/assets/css/main.css
@@ -2253,7 +2253,8 @@ a.back-to-top:hover, a.back-to-top:focus {
 /* Service Details Page for single product */
 .img-single-service {
   width: 100%;
-  height: 22rem ;
+  height: 33rem ;
+  object-fit: cover;
 }
 .fullwidth .section-title-header {
   background-color: #1f381799;
