service details part

--- a/public/backend/css/styles.css
+++ b/public/backend/css/styles.css
@@ -11961,7 +11961,7 @@ body {
 
 /* ck editor */
 .ck-editor__editable {
-  /* max-height: 100px; */
+  max-height: 115px;
   min-height: 100px;
   overflow-y: scroll;
 }
