--- a/public/frontend/assets/css/main.css
+++ b/public/frontend/assets/css/main.css
@@ -126,7 +126,8 @@ ul li, ol li {
   font-size: 36px;
   color: #333;
   line-height: 52px;
-  padding-bottom: 15px;
+  /* padding-bottom: 15px; */
+  padding-bottom: 30px;
   font-weight: 700;
   text-align: center;
   text-transform: uppercase;
@@ -140,7 +141,8 @@ ul li, ol li {
   height: 1px;
   width: 45px;
   left: 50%;
-  bottom: 10px;
+  /* bottom: 10px; */
+  bottom: 30px;
   -webkit-transform: translateX(-50%);
   transform: translateX(-50%);
   background-color: #ac1e6c
