--- a/public/frontend/assets/css/responsive.css
+++ b/public/frontend/assets/css/responsive.css
@@ -1,7 +1,8 @@
 /* only small desktops */
 @media (min-width: 992px) and (max-width: 1199px) {
     #main-slide .carousel-caption {
-      top: 32%;
+      /* top: 32%; */
+      /* min-width: 475px; */
     }
     .carousel-indicators {
       display: none;
@@ -32,7 +33,8 @@
   /* tablets */
   @media (max-width: 991px) {
     #main-slide .carousel-caption {
-      top: 32%;
+      /* top: 32%; */
+      /* min-width: 370px; */
     }
     .carousel-indicators {
       display: none;
@@ -58,7 +60,7 @@
   /* only small tablets */
   @media (min-width: 768px) and (max-width: 991px) {
     #main-slide .carousel-caption {
-      top: 32%;
+      /* top: 32%; */
     }
     .carousel-indicators {
       display: none;
@@ -89,7 +91,8 @@
       font-size: 16px;
     }
     #main-slide .carousel-caption {
-      top: 22%;
+      /* top: 22%; */
+      /* min-width: 260px; */
     }
     .carousel-indicators {
       display: none;
@@ -176,8 +179,10 @@
       margin-top: 25px;
     }
     .btn {
-      padding: 8px 10px;
-      font-size: 12px;
+      /* padding: 8px 10px;
+      font-size: 12px; */
+      padding: 3px 6px;
+      font-size: 10px;
     }
     .contact-map .container-form {
       /* width: 350px; */
@@ -194,5 +199,8 @@
       font-size: 20px;
       margin-top: 9px;
       margin-left: 4px;
+    }
+    .img-single-service {
+      height: 13rem ;
     }
   }
