--- a/public/frontend/assets/css/main.css
+++ b/public/frontend/assets/css/main.css
@@ -417,7 +417,7 @@ a.back-to-top:hover, a.back-to-top:focus {
 }
 .section-footer-padding {
   padding-top: 60px;
-  padding-bottom: 30px;
+  padding-bottom: 60px;
 }
 .no-padding {
   padding: 0 !important;
@@ -883,7 +883,8 @@ a.back-to-top:hover, a.back-to-top:focus {
 
 /* Sponsors Area */
 #sponsors {
-  background: #f2f2f2;
+  /* background: #f2f2f2; */
+  background: #fff;
 }
 
 #sponsors .spnsors-logo {
@@ -1139,7 +1140,10 @@ a.back-to-top:hover, a.back-to-top:focus {
 #team {
   background: #f2f2f2;
 }
-
+.team-image {
+  height: 255px;
+  width: 100%;
+}
 .team-item:hover {
   box-shadow: 0 25px 35px -12px rgba(0, 0, 0, 0.35);
 }
@@ -1378,7 +1382,7 @@ a.back-to-top:hover, a.back-to-top:focus {
   height: 40px;
   width: 85px;
   z-index: 21;
-  line-height: 1;
+  line-height: 1.5;
   border-radius: 4px;
   transition: color 0.3s ease-in-out;
 }
@@ -1408,6 +1412,12 @@ a.back-to-top:hover, a.back-to-top:focus {
 #gallery .card-img-top, #gallery-detail .card-img-top {
   height: 180px;
   transition: all 0.2s ease-in-out;
+}
+@media (max-width: 575px) {
+  #gallery .card-img-top, #gallery-detail .card-img-top {
+    height: auto;
+    transition: all 0.2s ease-in-out;
+  }
 }
 #gallery .card:hover .card-img-top, #gallery-detail .card:hover .card-img-top {
   transform: scale(1.05);
@@ -2048,7 +2058,8 @@ a.back-to-top:hover, a.back-to-top:focus {
 #main-slide .carousel-item img {
   position: relative;
   width: 100%;
-  max-height: 470px;
+  max-height: 490px;
+  object-fit: cover;
 }
 
 #main-slide .carousel-inner .carousel-item::after {
@@ -2072,7 +2083,7 @@ a.back-to-top:hover, a.back-to-top:focus {
   font-weight: 700;
   color: #fff;
   letter-spacing: 0.1rem;
-  margin-bottom: 10px;
+  margin-bottom: 0px;
 }
 
 #main-slide .carousel-item.active .carousel-caption {
@@ -2214,7 +2225,7 @@ a.back-to-top:hover, a.back-to-top:focus {
   height: 40px;
   width: 85px;
   z-index: 21;
-  line-height: 1;
+  line-height: 1.5;
   border-radius: 4px;
   transition: color 0.3s ease-in-out;
 }
